# RekiOS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
src/: lib.rs  main.rs  vga_buffer.rs
