[package]
name = "RekiOS"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "RekiOS"
test = false
bench = false

#[unstable]
#build-std = ["core", "compiler_builtins"]
#build-std-features = ["compiler-builtins-mem"]
#
#[build]
#target = "x86_64-reki_os.json"


[dependencies]
bootloader = "0.9"
