[package]
name = "RekiOS"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "RekiOS"
test = false
bench = false

#[unstable]
#build-std = ["core", "compiler_builtins"]
#build-std-features = ["compiler-builtins-mem"]
#
#[build]
#target = "x86_64-reki_os.json"

#use old versions of dependencies for better compability
[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.15.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
